# ML_BUDDY

./: .gitignore  .pre-commit-config.yaml  manage.py  pyproject.toml  readme.md
ml_api/: urls.py  views.py
ml_buddy/: asgi.py  settings.py  urls.py  wsgi.py
ml_buddy_d/: asgi.py  settings.py  urls.py  wsgi.py
