[tool.poetry]
name = "ml-buddy-d"
version = "0.1.0"
description = ""
authors = ["Asiri Amal <@example.com>"]
readme = "README.md"
packages = [{include = "ml_buddy_d"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
