[tool.poetry]
name = "ml-buddy"
version = "0.1.0"
description = ""
authors = ["Asiri Amal <www.asiriamal.com>"]
readme = "README.md"
packages = [{include = "ml_buddy"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
djangorestframework = "^3.14.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.0"
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"
pylint = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
